# energy-controller

./: .env.example  Cargo.toml  readme.md
src/: datasource.rs  main.rs  mcp.rs  web.rs
src/static/: index.html  keypad.html
